2010-07-05 Preferred kwarg names in set_xlim are now 'left' and
           'right'; in set_ylim, 'bottom' and 'top'; original
           kwargs are still accepted without complaint. - EF

2010-07-05 TkAgg and FltkAgg backends are now consistent with other
           interactive backends: when used in scripts from the
           command line (not from ipython -pylab), show blocks,
           and can be called more than once. - EF

2010-07-02 Modified CXX/WrapPython.h to fix "swab bug" on solaris so
           mpl can compile on Solaris with CXX6 in the trunk.  Closes
           tracker bug 3022815 - JDH

2010-06-30 Added autoscale convenience method and corresponding
           pyplot function for simplified control of autoscaling;
           and changed axis, set_xlim, and set_ylim so that by
           default, they turn off the autoscaling on the relevent
           axis or axes.  Therefore one can call set_xlim before
           plotting a line, for example, and the limits will be
           retained. - EF

2010-06-20 Added Axes.tick_params and corresponding pyplot function
           to control tick and tick label appearance after an Axes
           has been created. - EF

2010-06-09 Allow Axes.grid to control minor gridlines; allow
           Axes.grid and Axis.grid to control major and minor
           gridlines in the same method call. - EF

2010-06-06 Change the way we do split/dividend adjustments in
           finance.py to handle dividends and fix the zero division bug reported
           in sf bug 2949906 and 2123566.  Note that volume is not adjusted
           because the Yahoo CSV does not distinguish between share
           split and dividend adjustments making it near impossible to
           get volume adjustement right (unless we want to guess based
           on the size of the adjustment or scrape the html tables,
           which we don't) - JDH

2010-06-06 Updated dateutil to 1.5 and pytz to 2010h.
